--- a/presenter-fragment-tests/build.gradle
+++ b/presenter-fragment-tests/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.screeninteraction.presenterfragment.sample"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -20,13 +19,9 @@ android {
 }
 
 dependencies {
-
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.0.42-beta'
-
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.1'
-
-    compile (project(path: ':presenter-fragment'));
-
+    androidTestCompile project(path: ':presenter-fragment')
+    androidTestCompile "com.crittercism.dexmaker:dexmaker:1.4"
+    androidTestCompile "com.crittercism.dexmaker:dexmaker-dx:1.4"
+    androidTestCompile "com.crittercism.dexmaker:dexmaker-mockito:1.4"
 }
